# ossbuild

./: .gitignore  GStreamer (Express Edition).sln
Main/GStreamer/Source/gst-ffmpeg/gst-libs/ext/ffmpeg/libavformat/: tcp.c  udp.c
Main/GStreamer/Source/gst-plugins-bad/gst/h264parse/: gsth264parse.c  gsth264parse.h
Main/GStreamer/Source/gst-plugins-bad/gst/mpegdemux/: gstmpegtsdemux.c  gstmpegtsdemux.h
Main/GStreamer/Source/gst-plugins-base/gst-libs/gst/rtsp/: gstrtspconnection.c  gstrtspconnection.h  gstrtsptransport.c  gstrtsptransport.h
Main/GStreamer/Source/gst-plugins-good/gst/matroska/: ebml-read.c  matroska-demux.c  matroska-parse.c
Main/GStreamer/Source/gst-plugins-good/gst/rtp/: gstrtpgstdepay.c  gstrtpgstpay.c  gstrtpjpegdepay.c
Main/GStreamer/Source/gst-plugins-good/gst/rtpmanager/: Makefile.am  gstrtpjitterbuffer.c  gstrtpmanager.c  gstudpbin1.c  gstudpbin1.h
Main/GStreamer/Source/gst-plugins-good/gst/rtsp/: gstrtspsrc.c  gstrtspsrc.h
Main/GStreamer/Source/gst-plugins-good/gst/udp/: gstmultiudpsink.c  gstudpnetutils.c  gstudpsrc.c
Main/GStreamer/Source/gst-rtsp-server/examples/: test-launch.c
Main/GStreamer/Source/gst-rtsp-server/gst/rtsp-server/: rtsp-client.c  rtsp-client.h  rtsp-funnel.c  rtsp-media.c  rtsp-media.h  rtsp-server.c
Main/GStreamer/Source/gstreamer/gst/: gstpoll.c
Main/GStreamer/Source/gstreamer/tools/: gst-launch.c
